--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy.yaml
 on:
   workflow_dispatch:
   push:
@@ -9,8 +8,10 @@ name: Quarto Publish
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+
     permissions:
       contents: write
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -35,6 +36,16 @@ jobs:
             any::DT
             any::plotly
             any::lubridate
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas numpy matplotlib plotly seaborn
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
