--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,9 +16,6 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
@@ -45,7 +42,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas numpy matplotlib plotly seaborn
+          pip install pandas numpy matplotlib plotly seaborn pyyaml jupyter
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
