--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,10 +42,9 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas numpy matplotlib plotly seaborn pyyaml jupyter 
-          pip install cartopy xarray
-          pip install netCDF4 cftime IPython
-          pip install scikit-learn
+          pip install pandas numpy matplotlib plotly seaborn pyyaml jupyter
+          pip install cartopy xarray netCDF4 cftime IPython
+          pip install scikit-learn tensorflow scipy
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
