--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,17 +27,15 @@ jobs:
             any::knitr
             any::rmarkdown
             any::dplyr
-            any::RColorBrewer
             any::gt
             any::reshape2
             any::DT
-            any::plotly
-            any::lubridate
+            any::tidyverse
 
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'
 
       - name: Install Python dependencies
         run: |
