--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas numpy matplotlib plotly seaborn pyyaml jupyter dash
+          pip install pandas numpy matplotlib plotly seaborn pyyaml jupyter dash lxml
           pip install cartopy xarray netCDF4 cftime IPython
           pip install scikit-learn tensorflow scipy
 
